bouton reset réalisé

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -662,8 +662,12 @@ input[type="reset"]:hover,
 }
 
 .form-filter select {
-    padding: var(--PG-FIELD) 0;
+    padding: var(--PG-FIELD) 0.2rem;
     font-size: 0.8rem;
+    width: 120px;
+}
+
+.form-filter input {
     width: 120px;
 }
 
