ajout de l'affichage des messages cas de la page de modification

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -753,7 +753,8 @@ output[class="dashboard-file"] {
     z-index: 9999;
 }
 
-.alert-hidden {
+.alert-hidden,
+.message-hidden {
     display: none;
 }
 
